--- a/seqcluster/templates/report.rmd
+++ b/seqcluster/templates/report.rmd
@@ -37,7 +37,7 @@ root_path = "$path_abs"
 root_file = file.path(root_path, "srna_out_files")
 dir.create(root_file, showWarnings = FALSE)
 
-metadata_fn =  list.files(file.path(root_path), pattern = "summary.csv",recursive = T, full.names = T)
+metadata_fn =  list.files(file.path(root_path), pattern = "summary.csv$",recursive = T, full.names = T)
 metadata = read.csv(metadata_fn, row.names="sample_id")
 metadata = metadata[2:nrow(metadata), ,drop=FALSE]
 condition = names(metadata)[1]
@@ -487,7 +487,7 @@ dss_mirdeep2 = DESeqDataSetFromMatrix(countData = counts[rowSums(counts>0)>3,],
                              design = formula)
 
 dss = DESeq(dss)
-all_results = handle_deseq2(ddss_mirdeep2, design, condition, "mirdeep2_")
+all_results = handle_deseq2(dss_mirdeep2, design, condition, "mirdeep2_")
 
 ```
 
